eventing/k8s/base/eventbridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventbridge
  labels:
    app.kubernetes.io/name: eventbridge
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: eventbridge
  ports:
    - name: http
      port: 8080
      targetPort: http
